Bug 1273652: Always reinitialize the receiver/jitterbuffer when reseting video decoding r=pkerr